# fastapi-template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.observability.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/: main.py  routers.py
app/core/: auth.py  config.py  exception_handlers.py  exceptions.py  logging.py  telemetry.py
app/database/: base.py  repository.py  service.py
app/middleware/: __init__.py  access_logger.py
app/migrations/: env.py
app/migrations/versions/: 0001_create_user_table.py  0001_initial_example.py  20260323_0002_add_rbac.py  20260323_9b59222efb14_initial_schema.py  20260323_c79a537a533b_seed_default_roles_and_permissions.py
app/modules/auth/: dependencies.py  exceptions.py  routers.py  schemas.py  service.py
app/modules/example/: filters.py  models.py  repository.py  routers.py  schemas.py  service.py
app/modules/role/: models.py
app/modules/user/: exceptions.py  filters.py  models.py  repository.py  routers.py  schemas.py  service.py
coverage/: e2e.ini  unit.ini
docs/: observability.md
observability/: loki.yml  otel-collector.yml
observability/grafana/: datasources.yml
scripts/: install.sh  lint.sh  migrate.sh  run_app.sh  test.sh
tests/: conftest.py
tests/e2e/: conftest.py
tests/e2e/modules/auth/: test_routers.py
tests/e2e/modules/example/: test_routers.py
tests/e2e/modules/user/: test_routers.py
tests/factories/: user.py
tests/unit/core/: test_auth.py  test_exceptions.py
tests/unit/modules/auth/: test_schemas.py  test_service.py
tests/unit/modules/example/: test_models.py  test_routers.py  test_schemas.py  test_service.py
tests/unit/modules/user/: test_models.py  test_schemas.py  test_service.py
