[project]
name = "fastapi-template"
version = "0.1.0"
description = "FastAPI template with Repository pattern, DI, and best practices"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "alembic>=1.13.0",
    # Filtering & Pagination
    "fastapi-filter[sqlalchemy]>=0.6.0",
    "fastapi-pagination>=0.12.0",
    # Validation & Settings
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",
    # Auth
    "pyjwt>=2.8.0",
    "bcrypt>=4.0.0",
    # Rate limiting
    "slowapi>=0.1.9",
    # Logging
    "structlog>=24.0.0",
    # Observability (OpenTelemetry)
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp-proto-http>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.50b0",
    # Monitoring
    "sentry-sdk[fastapi]>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "testcontainers[postgres]>=4.0.0",
    "polyfactory>=2.0.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = ["app/migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["UP046"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

